# Messanger_Server

./: CMakeLists.txt  client.cpp  server.cpp
Client/: Client.hpp
Server/ClientHandler/: ClientHandler.hpp
Server/ServerStarter/: ServerStarter.hpp
database/: database.h
include/: includeBase.hpp  includeBoost.hpp
